--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -31,16 +31,16 @@
         <div class="week">
           <div class="date-box not-this-month">
             <div class="date">27</div>
-            <div class="event"><div class="rec rec-blue"></div>
+            <div class="event rec-blue"><div class="rec"></div>
               <div class="content">紐約來的Pizza博士</div>
             </div>
-            <div class="event"><div class="rec rec-darkblue"></div>
+            <div class="event rec-darkblue"><div class="rec"></div>
               <div class="content">就改天</div>
             </div>
-            <div class="event"><div class="rec rec-red"></div>
+            <div class="event rec-red"><div class="rec"></div>
               <div class="content">我不喜歡別人在我面前放屁</div>
             </div>
-            <div class="event"><div class="rec rec-yellow"></div>
+            <div class="event rec-yellow"><div class="rec"></div>
               <div class="content">我不喜歡別人在我面前放屁</div>
             </div>
           </div>
@@ -390,31 +390,31 @@
           </div>
           <div class="date-box">
             <div class="date">27</div>
-            <div class="event"><div class="rec rec-blue"></div>
+            <div class="event rec-blue"><div class="rec"></div>
               <div class="content">紐約來的Pizza博士</div>
             </div>
-            <div class="event"><div class="rec rec-darkblue"></div>
+            <div class="event rec-darkblue"><div class="rec"></div>
               <div class="content">就改天</div>
             </div>
-            <div class="event"><div class="rec rec-red"></div>
+            <div class="event rec-red"><div class="rec"></div>
               <div class="content">我不喜歡別人在我面前放屁</div>
             </div>
-            <div class="event"><div class="rec rec-yellow"></div>
+            <div class="event rec-yellow"><div class="rec"></div>
               <div class="content">我不喜歡別人在我面前放屁</div>
             </div>
           </div>
           <div class="date-box">
             <div class="date">28</div>
-            <div class="event"><div class="rec rec-blue"></div>
+            <div class="event rec-blue"><div class="rec"></div>
               <div class="content">紐約來的Pizza博士</div>
             </div>
-            <div class="event"><div class="rec rec-darkblue"></div>
+            <div class="event rec-darkblue"><div class="rec"></div>
               <div class="content">就改天</div>
             </div>
-            <div class="event"><div class="rec rec-red"></div>
+            <div class="event rec-red"><div class="rec"></div>
               <div class="content">我不喜歡別人在我面前放屁</div>
             </div>
-            <div class="event"><div class="rec rec-yellow"></div>
+            <div class="event rec-yellow"><div class="rec"></div>
               <div class="content">我不喜歡別人在我面前放屁</div>
             </div>
           </div>
