Restore newcomer page from last year.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,6 +71,9 @@
 				<li>
 					<a class="page-scroll" href="/events/" rel="nofollow" data-no-turbolink>活動吧</a>
 				</li>
+                <li>
+                    <a class="page-scroll" href="/newcomer/" rel="nofollow" target="_blank">網路新生包</a>
+                </li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li>
