--- a/app/assets/stylesheets/newcomer/curricular.scss
+++ b/app/assets/stylesheets/newcomer/curricular.scss
@@ -108,7 +108,7 @@ span{
         display: inline-block;
         margin: 0 20px 0 20px;
         padding-top:8px;
-        background-color:#00aee9;
+        background-color:#cfeadf;
         border-radius:25px;
         width:50px;
         height:50px;
