--- a/app/assets/stylesheets/newcomer/newcomer-2.scss
+++ b/app/assets/stylesheets/newcomer/newcomer-2.scss
@@ -49,14 +49,15 @@
                 transition: background .3s ease-in-out;
                 color:#27284e;
                 &:hover {
-                    color: rgba(39,40,78, 0.8);
+                    color: #FEFEFE;
                     outline: none;
-                    background-color: rgba(#27284e, 0.1);
+                    background-color: #ce8d67;
                 }
                 &:focus,
                 &:active {
                     outline: none;
-                    background-color: transparent;
+                    color: #FEFEFE;
+                    background-color: #ce8d67;
                 }
             }
             &.active {
