--- a/app/assets/stylesheets/newcomer/curricular.scss
+++ b/app/assets/stylesheets/newcomer/curricular.scss
@@ -1,9 +1,11 @@
 
 .spacing{
   padding-top: 100px;
+  background: #111;
 }
 .curricular{
-  color:#272822;
+  color:#ffaa62;
+  background: #111;
 }
 .important{
   margin-top:80px;
@@ -139,5 +141,4 @@ span{
 .curricular-footer{
     padding:80px 20px 80px 20px;
     text-align:center;
-    background-color:#4121ab;
 }
