--- a/app/assets/stylesheets/newcomer/newcomer.scss
+++ b/app/assets/stylesheets/newcomer/newcomer.scss
@@ -1,23 +1,13 @@
 @import 'variables';
 @import 'mixins';
 //@import "font-awesome-sprockets";
-@import "font-awesome";
-@font-face {
-  font-family: 'NotoSans';
-  src: font-url('NotoSans-Regular.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: '谷歌黑體';
-  src: font-url('cwTeXHei.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
+//@import "font-awesome";
+@import url(http://fonts.googleapis.com/earlyaccess/notosans.css);
+@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);
 body {
     max-width: 100%;
     height: 100%;
-    font-family: 'NotoSans';
+    font-family: 'Noto Sans', 'Noto Sans CJK TC';
     color: white;
     background-color: #f3faf5;
     -webkit-tap-highlight-color: rgba(white, 0.2);
@@ -29,6 +19,16 @@ html {
     overflow-x:hidden;
 }
 
+#map-img{
+    margin-top: 2%;
+    background-image: url('map.png');
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-size: 80%;
+    height:150vh;
+
+}
+
 
 h1,
 h2,
@@ -38,8 +38,8 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: 'NotoSans';
-    font-weight: 700;
+    font-family: 'Noto Sans', 'Noto Sans CJK TC';
+    font-weight: 500;
     letter-spacing: 1px;
 }
 
@@ -67,7 +67,7 @@ a {
 }
 
 .light {
-    font-weight: 400;
+    font-weight: 200;
 }
 
 .navbar-custom {
@@ -76,9 +76,9 @@ a {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(white, 0.3);
     text-transform: uppercase;
-    font-family: 'NotoSans';
+    font-family: 'Noto Sans', 'Noto Sans CJK TC';
     font-size: 1.18em;
-    font-weight:500;
+    font-weight:300;
     background-color: #f3faf5;
     .navbar-toggle {
         padding: 4px 6px;
@@ -166,6 +166,7 @@ a {
     .text-box{
         padding:50% 0 0 10%;
         h2{
+            color: black;
             padding:2.5rem 5rem 2.5rem 5rem;
             margin: 0 28% 0 5%;
             background-color: #e0a56b;
@@ -174,6 +175,7 @@ a {
     .text-box-2{
         padding:5% 0 0 10%;
         h2{
+            color: black;
             padding:2.5rem 5rem 2.5rem 5rem;
             margin:0 14% 0 5%;
             background-color: #e0a56b;
@@ -282,7 +284,7 @@ a {
 .footer-custom{
     text-align:left;
     padding: 3% 0 3% 0;
-    font-family: 'NotoSans';
+    font-family: 'Noto Sans', 'Noto Sans CJK TC';
     .footer-lower-bar{
         color:$footer;
     }
@@ -296,7 +298,7 @@ a {
         }
         li.footer-header{
             color: #d48a2b;
-            font-weight: 600;
+            font-weight: 400;
             font-size:2rem;
             margin:5px;
             padding:5px;
@@ -364,7 +366,7 @@ a {
     @include custom-btn(#009933,#f7f7f7,#FFF);
 }
 .btn-5{
-    @include custom-btn(#281270,#f7f7f7,#FFF);
+    @include custom-btn(#333333,#f7f7f7,#FFF);
 }
 .btn-8{
     @include custom-btn(#846c4e,#efb973,#efb973);
@@ -374,7 +376,7 @@ a {
     display:table;
     width:100%;
     height:100%;
-    background:image-url("newcomer/background.jpg") no-repeat bottom center scroll;
+    #background:image-url("newcomer/background.jpg") no-repeat bottom center scroll;
     background-size:cover;
     -webkit-background-size:cover;
     -moz-background-size:cover;
@@ -382,7 +384,7 @@ a {
     .cover-pic{
         height:100%;
         width:100%;
-        background:image-url("newcomer/cover-pic.svg") no-repeat bottom center scroll;
+        #background:image-url("newcomer/cover-pic.svg") no-repeat bottom center scroll;
         background-size:cover;
         -webkit-background-size:cover;
         -moz-background-size:cover;
@@ -391,19 +393,21 @@ a {
     .text-box{
         padding:50% 0 0 0.1%;
         h2{
+            color: black;
             text-align: center;
-            padding:2rem 2rem 2rem 2rem;
+            padding:1.5rem 1rem 1.5rem 1rem;
             margin: 0 2% 0 2%;
-            background-color:#10608c;
+            #background-color:#10608c;
         }
     }
     .text-box-2{
         padding:5% 0 0 0.1%;
         h2{
+            color: black;
             text-align: center;
-            padding:2.5rem 2rem 2.5rem 2rem;
+            padding:1.5rem 1rem 1.5rem 1rem;
             margin:5% 2% 0 2%;
-            background-color:#10608c;
+            #background-color:#10608c;
         }
     }
 }
@@ -428,7 +432,7 @@ a {
 .curricular-footer{
     padding:80px 20px 80px 20px;
     text-align:center;
-    background-color:#251e7b;
+    background-color:#ffb160;
 }
 @media (max-width: 992px) {
 	.navbar-header {
