--- a/app/views/newcomer/procedure.html.erb
+++ b/app/views/newcomer/procedure.html.erb
@@ -10,7 +10,7 @@
 				<div class="timeline-badge danger"><i class="fa fa-money"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.02 － 14</h4>
+						<h4 class="timeline-title">08.31 － 09.13</h4>
 					</div>
 					<div class="timeline-body">
 						<p>繳交學雜費</p>
@@ -22,7 +22,7 @@
 				<div class="timeline-badge primary"><i class="fa fa-building"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.03 － 04</h4>
+						<h4 class="timeline-title">09.02 － 03</h4>
 					</div>
 					<div class="timeline-body">
 						<p>大一新生宿舍進住(8:00~17:00)</p>
@@ -46,12 +46,12 @@
 				<div class="timeline-badge warning"><i class="fa fa-group"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.06 － 09</h4>
+						<h4 class="timeline-title">09.05 － 08</h4>
 					</div>
 					<div class="timeline-body">
 						<p>新生入學輔導</p>
 						<p>新生開學典禮及家長座談會</p>
-						<p>弱勢助學措施說明會（09.06 晚上7：00）</p>
+						<p>各項助學措施說明會（09.07 下午2：00）</p>
 					</div>
 				</div>
 			</li>
@@ -74,7 +74,7 @@
 				<div class="timeline-badge danger"><i class="fa fa-bank"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.12</h4>
+						<h4 class="timeline-title">09.11</h4>
 					</div>
 					<div class="timeline-body">
 						<p>開學上課</p>
@@ -88,7 +88,7 @@
 				<div class="timeline-badge danger"><i class="fa fa-exclamation-triangle"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.14</h4>
+						<h4 class="timeline-title">09.13</h4>
 					</div>
 					<div class="timeline-body">
 						<p>註冊截止</p>
@@ -101,7 +101,7 @@
 			<li id="timebox" class="timeline-inverted">
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.19</h4>
+						<h4 class="timeline-title">09.15</h4>
 					</div>
 					<div class="timeline-body">
 						<p>申請外語榮譽學分抵免、大</p>
@@ -114,7 +114,7 @@
 				<div class="timeline-badge danger"><i class="fa fa-archive"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
-						<h4 class="timeline-title">09.23</h4>
+						<h4 class="timeline-title">09.22</h4>
 					</div>
 					<div class="timeline-body">
 						<p>加選、退選、校際選修及申</p>
