--- a/app/views/newcomer/shopping.html.erb
+++ b/app/views/newcomer/shopping.html.erb
@@ -60,20 +60,19 @@
 			<div class="thumbnail">        
 				<%= image_tag "newcomer/shopping/desk_light2.png", :class => "group list-group-image" %>
 				<div class="caption">            
-					<h4 class="group inner list-group-item-heading">LDK005-9AAD-TU 東亞Wisdom-9W護眼LED檯燈-2代</h4>            
+					<h4 class="group inner list-group-item-heading">LDK011-8AAD 東亞Navvy 8W LED桌夾兩用檯燈</h4>            
 					<p class="group inner list-group-item-text">
 					<ul>
-						<li>1. 光源採用世界一級大廠CREE原廠High-powerLED 9W光源，色溫4000K</li>
-						<li>2. 智慧機能操作、雙軸向燈臂設計。</li>
-						<li>3. 鋁擠型材質，耐熱不退色變形。</li>
-						<li>4. 通過CNS安全規範檢驗標準，安全有保障。</li>
-						<li>5. 110~240V/50~60HZ、(ON-OFF觸控開關)</li>
-						<li>6. 顏色：灰色</li>
+						<li>1. 按鍵式三段開關，隨時挑整照明亮度</li>
+						<li>2. 兩段式燈臂設計，滿足全方位照明需求</li>
+						<li>3. 明亮寬廣的照射面，滿足照明需求</li>
+						<li>4. COB LED光學膜組，光照無重影</li>
+						<li>5. 桌夾兩用，可依需求更換</li>
 					</ul>
 					</p>            
 					<div class="row">                
 						<div class="col-xs-12">                    
-							<p class="lead">原價: 2990 | 售: 1999  </p>                
+							<p class="lead">原價: 2400 | 售: 1999  </p>                
 						</div>                
 					</div>
 				</div>
@@ -96,7 +95,7 @@
 					</p>            
 					<div class="row">                
 						<div class="col-xs-12">                  
-							<p class="lead">原價: 780 |  售: 650</p>                
+							<p class="lead">原價: 820 |  售: 630</p>                
 						</div>                
 					</div>
 				</div>
@@ -121,7 +120,7 @@
 					</p>            
 					<div class="row">                
 						<div class="col-xs-12">                    
-							<p class="lead">原價: 1699 | 售: 1299</p>                
+							<p class="lead">原價: 1955 | 售: 1299</p>                
 						</div>                
 					</div>
 				</div>
@@ -132,7 +131,7 @@
 
 <section class="buy-it">
 	<h2>新生團購</h2>
-	<a href="https://zhirui1.typeform.com/to/prJKoM" target="_blank"><button class="btn-2">點我訂購</button></a>
+	<a href="https://goo.gl/2gtpGW" target="_blank"><button class="btn-2">點我訂購</button></a>
 </section>
 
 <%= javascript_include_tag 'newcomer/shopping' %>
