Add missing icon.

--- a/app/views/newcomer/procedure.html.erb
+++ b/app/views/newcomer/procedure.html.erb
@@ -99,6 +99,7 @@
 
 
 			<li id="timebox" class="timeline-inverted">
+				<div class="timeline-badge danger"><i class="fa fa-info-circle"></i></div>
 				<div class="timeline-panel">
 					<div class="timeline-heading">
 						<h4 class="timeline-title">09.15</h4>
