--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -6,57 +6,49 @@
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q1：想脫魯要怎麼做？</h3>
-        <p>小編認為呢，到了交大就要有交不到女朋友的準備...噢不是啦！<br> 想要脫魯當然要先加入學聯會啊！<br>
-            學聯會的成員超過一百人，其中大半都是暖男/新好男人，也不乏和小編一樣漂亮的正妹（誤），怎麼可以不好好把握呢？<br>
-            當然女孩子也可以嘗試在大馬路上故意讓考卷被吹走（前提是你考好一點）、和同學走在一起的時候踉蹌一下（小心不要跌倒）或是看電影的時候假裝很冷（結果對方沒有帶外套）<br>
-            男孩們也可以嘗試在餐廳裡面搭訕（然後被警察抓走）或是出去玩的時候借人家外套（然後被發現有汗臭味）<br>
-            不過小編還是認為加入學聯會最快啦！（撒花）<br></p>
+        <h3>Q1：要帶什麼去學校？</h3>
+        <p>
+          1 衣褲／在架數支／床墊／棉被／枕頭<br>
+          2 盤洗用具／法具／餐具／上觀用具<br>
+          3 檯燈／網路線（分享器）／電腦／隨身碟<br>
+          4 抹布／拖鞋／毆盆／衛生紙／小垃圾桶<br>
+        </p>
       </li>
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q2：請問交大校地裡面哪一家銀行的提款機比較多? 要辦哪一家銀行，領錢時才比較不需要手續費呢？</h3>
-        <p>交大裡面的提款機有郵局、玉山銀行還有兆豐銀行的三種唷！郵局ATM分佈在交大第二餐廳後門、綜一以及中正堂側門位置，玉山銀行在交大女二舍餐廳一樓、綜一以及中正堂側門，另外兆豐銀行的提款機在活動中心一樓唷！<br>
-        如果有機會領到學校的獎學金，辦理玉山銀行或是郵局的帳戶會比較方便，因為有部份時候學校不願意匯錢到這兩家銀行以外的帳號唷！</p>
+        <h3>Q2：住宿舍有什麼要注意的嗎？</h3>
+        <p>晚間12 點寢室會強制熄燈（段考週例外），但插座仍會供電，因此建議同學準偏檯燈﹔另外，部份宿舍沒有設置公用冰箱，若有需要可以與室友合購小冰箱哦！</p>
       </li>
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q3：請問前輩們建議住宿生自行準備床墊還是購買新生包裡的宣傳上的？因為聽說尺寸不好找…</h3>
-        <p>這是我們幾位的經驗：如果自行準備床墊，可能會買到尺寸不合的，因為校內宿舍有部份的床柱會影響到床墊的擺放。新生包上的床墊廠商已跟交大合作多年，因此新生宿舍的床墊尺寸廠商很熟悉，可以放心地訂購！升上不同的年級，換了宿舍，床墊的大小尺寸也不會因此變得不合適唷！如果到時候真的遇到其他問題也能很快速的聯絡到廠商幫忙處理，不用擔心萬一出問題沒有辦法解決～</p>
+        <h3>Q3：平常在學校大家都吃什麼？</h3>
+        <p>基於價格和距離的限制，同學們平常主要還是以校內的學生餐廳為主，當然偶而空閒時也會去清大夜市或是新竹市區吃飯。</p>
       </li>
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q4：想請問大一不能申請的'機車停車證'? 另外除了不能進入環校機車道，還有甚麼限制嗎？</h3>
-        <p>嗨！大一不能申請校內機車證，因此機車不能停在環校機車道上的各個停車棚內，但是依然可以停在大學路上的停車棚中喔。唯獨大家比較常抱怨的是大學路上的停車棚較容易刮傷愛車，所以如果你的車是新車，就要比較注意一些！另外，貼心小提醒：由於大學路上的住戶時常會檢舉機車違停的問題，所以停車時一定要記得乖乖停在車棚內喔~~<br></p>
+        <h3>Q4：生病的話要去哪裡就診？</h3>
+        <p>學校附設有健康中心，位於行政大樓一樓。另外，離學校最近的醫院是位在校外光復路上的馬偕醫院，從校內可搭乘 2 路公車抵達，車程約 15 分鐘。</p>
       </li>
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q5：校內的素食餐廳?</h3>
-        <p>基本上學校餐廳中素食的選擇不是很多，如果是純素的話(不食用豬油)可能只有第二餐廳的二樓自助餐、7-11、全家可以選擇，或者是騎車、走路去外面吃。方便素的話，女二與二餐的自助餐基本上都能吃，不排斥的話二餐、女二都有滷味，清大也有素食餐廳。
-是說小編有個朋友吃素吃到後來乾脆開始吃麥當勞漢堡這種事也是有發生過的啾咪 >_^<br></p>
+        <h3>Q5：我會需要用到什麼交通工具呢？</h3>
+        <p>交大校內是禁行機車的！建議同學在校內可以選擇步行或騎乘腳踏車，去校外則可搭乘 2 路公車或科學園區巴士（小紅巴）﹔另外，依校規規定，大一新生不得申請機車證停入學校停車場啦！</p>
       </li>
       <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q6：到時候選課的時候是可以跨校的嗎？</h3>
-        <p>只要是屬於台聯大系統（交大、清大、陽明、中央）的學校，都可以互相跨校選課喔～選課的地方一樣是在交大選課系統這個網站，不過跨校選課會有一些比較複雜的流程，而相關流程亦會公布在交大選課系統中。如果選擇校外的課程，你會需要跑不少地方處室蓋章。你可以先到各校選課網站參考各校公告跨校選課的課程，以及所需的流程，然後等到規定的選課時間再處理跨校流程的部份即可。</p>
+        <h3>Q6：學校裡還有什麼設施呢？</h3>
+        <p>校內對泳池分為室內及室外，室外不收費，室內則按次計費﹔健身耳有兩間，分別在體育館地下室及游泳池樓上﹔理髮部、美髮部、眼鏡部及洗衣部都位於活動中心地下室。</p>
       </li>
-            <li>
+      <li>
         <input type="checkbox" checked>
         <i></i>
-        <h3>Q7：請問大學用書都要自己買嗎?有沒有二手的</h3>
-        <p>通常開學後班代會統一訂購系上課程的用書，如果想要用二手的可以向系上的學長姐詢問，或是到華通書局樓上的二手書寄賣區挑選。另外，交大也有<a href="https://plus.nctu.edu.tw/books/">「NCTU+ 二手書專區」</a>、<a href="https://www.facebook.com/groups/191505604299442/">「交大二手拍賣版」</a>等多種二手交易平台可以使用！</p>
-      </li>
-            <li>
-        <input type="checkbox" checked>
-        <i></i>
-        <h3>Q8：在宿舍裡需要帶多長的網路線才夠呢？</h3>
-        <p>看是要買長一點的線或者是架個無線網路。如果只是在書桌上使用，那麼兩公尺已經綽綽有餘～
-冰箱的部份，大部分都是一代一代傳承下來的好二手三手冰箱囉！如果室友之間想要集資買新的冰箱當然也沒問題 :)</p>
+        <h3>Q7：可以寄包裹（網購）到宿舍嗎？</h3>
+        <p>當然可以啦！地址填寫「新竹市大學路1001號 交通大學 xx舍 xxx房」，郵遞區號「30010」，就能順利送達囉！等收到領貨通知後再到宿舍管理員室收貨即可。</p>
       </li>
     </ul>
 </div>
