--- a/app/views/newcomer/main.html.erb
+++ b/app/views/newcomer/main.html.erb
@@ -61,7 +61,7 @@
     <div class="container">
         <h2>實體新生包</h2>
         <p>
-        <%= link_to "/pdf/newcomer/學聯新生包手冊.pdf", :target => '_blank' do %>
+        <%= link_to "/newcomer/pdf", :target => '_blank' do %>
             <button class="btn-8">查看</button>
         <% end %>
         </p>
