--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -50,6 +50,19 @@
         <h3>Q7：可以寄包裹（網購）到宿舍嗎？</h3>
         <p>當然可以啦！地址填寫「新竹市大學路1001號 交通大學 xx舍 xxx房」，郵遞區號「30010」，就能順利送達囉！等收到領貨通知後再到宿舍管理員室收貨即可。</p>
       </li>
+      <li>
+        <input type="checkbox" checked>
+        <i></i>
+        <h3>Q8：我好喜歡學聯會辦的活動歐，要怎麼繳會費呢？</h3>
+        <p>會費自105學年度開始，加入學校出納組的代收系統的行列，所以只要使用繳交註冊費、學雜費的相同方式就可以成功繳納歐~~很方便吧~~</p>
+        <p>
+          今年的繳費期限是8/31~9/13，只要在以下的網站，都可以下載到繳費單歐~~<br>
+          1. 出納組學雜費查詢系統 <a href="https://tuition.nctu.edu.tw/cashier/" target="_blank">https://tuition.nctu.edu.tw/cashier/</a><br>
+          2. 玉山銀行學雜費代收網站 <a href="https://easyfee.esunbank.com.tw/school/paycaweb/login.action" target="_blank">https://easyfee.esunbank.com.tw/school/paycaweb/login.action</a>
+        </p>
+        <p>下載到繳費單之後，可以依照單子上所標明的方式繳納。採用不同的繳納方式，你會需要自行負擔不同的手續費金額，請仔細閱讀所有的繳納方式之後，選擇最適合你的一種。如果閱讀完以上的文字之後，你仍然不太清楚到底要怎麼辦？或是說你有其他相關的疑問，請你趕緊聯繫學聯會粉絲專頁，或是寄電子信件 (stu.nctu@gmail.com) 給我們歐~~ 如果你不小心錯過上述期限，也可以在社團博覽會或是新生入住時，到學聯會攤位現場繳費！</p>
+        <p><b>貼心小提醒：請勿多次、重複繳納會費，我們將無法保證能夠迅速退款給你。</b></p> 
+      </li>
     </ul>
 </div>
 <section class="end-qna">
