--- a/app/views/newcomer/shopping.html.erb
+++ b/app/views/newcomer/shopping.html.erb
@@ -103,7 +103,6 @@
 		</div>
 
 		<div class="item col-sm-4">    
-
 			<div class="thumbnail" id="lamp-switch">
 				<%= image_tag "newcomer/shopping/desk_light3.png", :class => "group list-group-image" %>
 				<div class="caption">            
@@ -126,12 +125,42 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="item col-sm-4">    
+			<div class="thumbnail" id="lamp-switch">
+				<%= image_tag "newcomer/shopping/bed.png", :class => "group list-group-image" %>
+				<div class="caption">            
+					<h4 class="group inner list-group-item-heading">寢具訂購  床枕、換洗、生活用品</h4>           
+					<p class="group inner list-group-item-text">
+					<ul>
+						<b>床枕用品</b>
+						<li>U.矽膠3D蜂巢彈簧床墊</li>
+						<li>GT.天絲針織棉釋壓記憶床墊</li>
+						<li>F.冰絲蓆長效彈力床墊</li>
+						<li>T.3D獨立筒枕</li>
+						<b>換洗用品</b>
+						<li>E.純棉三件式</li>
+						<li>M.天絲棉三件式</li>
+						<li>K.純棉二件式</li>
+						<li>P.純棉床墊套</li>
+						<li>I.舒柔保潔墊</li>
+						<b>生活用品</b>
+						<li>Y1.吹風機</li>
+						<li>Y2.延長線</li>
+						<li>Y3.電風扇</li>
+						<li>N.生活用品二十件組</li>
+					</ul>
+					</p>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
 <section class="buy-it">
 	<h2>新生團購</h2>
-	<a href="https://goo.gl/2gtpGW" target="_blank"><button class="btn-2">點我訂購</button></a>
+	<a href="https://goo.gl/2gtpGW" target="_blank"><button class="btn-2">點我訂購<br>計算機、檯燈</button></a>
+	<a href="http://shopping.darphia.com/" target="_blank"><button class="btn-2">點我訂購<br>寢具</button></a>
 </section>
 
 <%= javascript_include_tag 'newcomer/shopping' %>
