Update club infos.

--- a/app/views/layouts/_newcomer_header.html.erb
+++ b/app/views/layouts/_newcomer_header.html.erb
@@ -38,7 +38,7 @@
 				<li> 
 					<%= link_to "交大地圖", newcomer_map_path %>
 				</li> 
-				<li><%= link_to "D2帳號申請", newcomer_d2setup_path %></li> 
+				<li><%= link_to "D2帳號申請", "http://www.it.nctu.edu.tw/?page_id=2569", target: "_blank" %></li> 
 				<li><%= link_to "選課教學", newcomer_chooseClass_path %></li> 
 				<li><%= link_to "NCTU+", "https://plus.nctu.edu.tw/" , target: "_blank" %></li>
 				<li><%= link_to "學聯會", "https://stunion.nctu.edu.tw/blog/", target: "_blank" %></li>
