change dateBox style, add functions to tag-cale.js

--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -554,7 +554,20 @@
 
 
       <div class="tag-cale">
-        <div class="today"><h2><%= Time.now.strftime("%-m月%-d日 %^a") %></h2></div>
+        <div class="today today-sel"><h2><%= Time.now.strftime("%-m月%-d日 %^a") %></h2></div>
+        <div class="thing-cale"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br>
+          <span class="glyphicon glyphicon-time"></span> 2017-05-23 - 23:59:59<br>
+            HW4 - DB分組asdfsdfsdfaasdfasdf</div></div>
+        <div class="thing-cale"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br>
+          <span class="glyphicon glyphicon-time"></span> 2017-05-23 - 23:59:59<br>
+            HW4 - DB分組sdfasdfasdfsdfasdfasdfasdf</div></div>
+        <div class="thing-cale"><div class="rec"></div><div class="content"><b>資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論</b><br>
+          <span class="glyphicon glyphicon-time"></span> 2017-05-23 - 23:59:59<br>
+            HW4 - DB分組asdfasdfasdfadfdfdfdfdfdffffff資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫系統概論資料庫</div></div>
+        <div class="thing-cale"><div class="rec"></div><div class="content"><b>資料庫系統概論asdf</b><br>
+          <span class="glyphicon glyphicon-time"></span> 2017-05-23 - 23:59:59<br>
+            HW4 - DB分組sadfasdfasdf</div></div>
+
       </div>
       <div class="tag-info">
         <div class="info-title">5/24 期中考地點與時間公告</div>
@@ -578,35 +591,35 @@
         <div class="today"><h2><%= Time.now.strftime("%-m月%-d日 %^a") %></h2></div>
         <div class="e3">
           <div class="title-bar" id="bar1">e3 公告</div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
         </div>
         <div class="count-down">
           <div class="title-bar" id="bar2">今天</div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
         </div>
         <div class="count-down">
           <div class="title-bar" id="bar3">還剩2天</div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
         </div>
         <div class="count-down">
           <div class="title-bar" id="bar4">還剩3天</div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
         </div>
         <div class="count-down">
           <div class="title-bar" id="bar5">下個禮拜</div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
-          <div class="thing"><div class="rec"></div><div class="content">[資料庫系統概論] HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
+          <div class="thing"><div class="rec"></div><div class="content"><b>資料庫系統概論</b><br> HW4 - DB分組</div></div>
         </div>
       </div>
 
