--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -31,6 +31,10 @@
   vertical-align: middle;
   line-height: 40px;
   font-size: 30px;
+
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .sel-month{
@@ -102,7 +106,7 @@ h2{
   background-color: transparent;
   top: -5px;
   margin-top: -5px;
-  
+
   border-color: #E3E3E3;
   border-style: solid;
   border-width: 0 0px 0 1px;
@@ -119,7 +123,7 @@ h2{
   float: left;
   width: 14.285%;
   height: 100%;
-  background: #FFF;
+  background: #f8f8f8;
 
   border-color: #F0F0F0; 
   border-style: solid;
@@ -162,8 +166,8 @@ h2{
 .event{
   float: left;
   width: 100%;
-  height: 24px;
-  background: #EEE;
+  height: 48px;
+  background: #F2F2F2;
 }
 
 
@@ -226,6 +230,10 @@ h2{
   cursor: pointer;
 }
 
+.today-sel{
+  background: #42baff;
+}
+
 .e3{
   background: #FFF;
   width: 100%;
@@ -255,7 +263,7 @@ h2{
 .thing{
   background: #FFFDFA;
   width: 100%;
-  height: 35px;
+  height: 50px;
 
   padding: 0 0 0 0;
 
@@ -293,11 +301,12 @@ h2{
   background: #FFDF29;
 }
 
+
 .event .content{
   margin-left: 4px;
   padding: 3px 4px 3px 5px;
-  width: 13.2%;
-  height: 24px;
+  width: 13.4%;
+  height: 48px;
   position: absolute;
 
 
@@ -320,12 +329,26 @@ h2{
   background: #666;
   cursor: default;
 
-  width: 20%;
-  height: 24px;
+  width: 40%;
+  height: 48px;
   position: absolute;
   z-index: 1000;
 }
 
+.event-omit{
+
+  float: left;
+  width: 100%;
+  height: 20px;
+
+
+  background: #dcdcdc;
+  color: #676767;
+  cursor: default;
+
+  text-align: center;
+  font-weight: bold;
+}
 
 .thing .rec{
   float: left;
@@ -358,14 +381,73 @@ h2{
 }
 
 
+.thing-cale{
+  background: #FFFDFA;
+  width: 100%;
+
+  padding: 0 0 0 0;
+
+  border-color: #E3E3E3;
+  border-style: solid;
+  border-width: 0 1px 1px 0;
+}
+
+
+.thing-cale .content{
+  color: #666;
+  background: #FFFDFA;
+
+  float: left;
+  height: auto;
+  width: 100%;
+
+  margin: 0 0 1px 0;
+  padding: 9px 18px 15px 15px;
+
+  font-size: 1em;
+  font-family: 'Noto Sans TC';
+  font-weight: 300;
+
+  border-width: 0 0 0 5px;  
+  border-style: solid;
+
+  transition: background 0.3s;
+  transition-timing-function: ease;
+}
+
+
+.border-blue{
+  border-color: #00C8F5;
+}
+.border-darkblue{
+  border-color: #0092E0;
+}
+.border-red{
+  border-color: #F53900;
+}
+.border-yellow{
+  border-color: #FFDF29;
+}
+
+
+
+.thing-cale .content:hover{
+  color: #EEE;
+  background: #666;
+
+  cursor: default;
+}
+
+
 .not-this-month{
-  opacity: 0.5;
+  opacity: 0.3;
+  background: #CCC;
 }
 
 
 .not-this-month .event .content{
   opacity: 0.5;
-  width: 13.2%;
+  width: 13.4%;
 }
 
 
@@ -375,6 +457,7 @@ h2{
   position:absolute;
   z-index: 0;
   width: 100%;
+  height: 888px;
   overflow: scroll;
 }
 
@@ -383,6 +466,7 @@ h2{
   background: #FAFAFA;
   z-index: 100;
   width: 100%;
+  height: 888px;
   overflow: scroll;
 }
 
@@ -390,6 +474,7 @@ h2{
   position:absolute;
   z-index: 200;
   width: 100%;
+  height: 888px;
   overflow-y: scroll;
 }
 
@@ -435,6 +520,7 @@ h2{
 }
 
 
+
 @media(max-width: 480px){
   .not-this-month{
     display: none;
@@ -450,7 +536,7 @@ h2{
   }
   .event .content{
     width: 97%;
-    height: 24px;
+    height: 48px;
   }
   .event .content:hover{
     width: 97%;
