--- a/app/assets/stylesheets/calendar.css
+++ b/app/assets/stylesheets/calendar.css
@@ -263,7 +263,7 @@ h2{
 .thing{
   background: #FFFDFA;
   width: 100%;
-  height: 50px;
+  height: 85px;
 
   padding: 0 0 0 0;
 
@@ -350,25 +350,27 @@ h2{
   font-weight: bold;
 }
 
-.thing .rec{
-  float: left;
-  width: 5px;
-  height: 100%;
-}
-
 .thing .content{
+  color: #666;
   background: #FFFDFA;
-  #float: left;
-  height: 100%;
-  width: auto;
+
+  float: left;
+  height: 85px;
+  width: 100%;
+
+  margin: 0 0 1px 0;
+  padding: 9px 18px 15px 15px;
+
+  font-size: 1em;
+  font-family: 'Noto Sans TC';
+  font-weight: 300;
 
   white-space: nowrap;
   overflow : hidden;
   text-overflow: ellipsis;
-  padding: 9px 9px 9px 10px;
-  font-size: 0.8em;
-  font-family: 'Noto Sans TC';
-  color: #666;
+
+  border-width: 0 0 0 5px;  
+  border-style: solid;
 
   transition: background 0.3s;
   transition-timing-function: ease;
