--- a/app/views/calendar/index.html.erb
+++ b/app/views/calendar/index.html.erb
@@ -200,20 +200,7 @@
 
       </div>
       <div class="tag-info">
-        <div class="info-title">5/24 期中考地點與時間公告</div>
-        <div class="info-time">網路通訊原理 - <span class="glyphicon glyphicon-time"></span> 2017-05-23 </div>
-        <div class="info-content">各位同學好:
-
-考試時間: 5/24(三) 10:10 ~ 12:00 
-
-請學號為奇數的同學至ED B26 ，學號為偶數的同學至ED B27
-
-請同學隔排坐，謝謝
-
-助教 
-          
-        </div>
-
+        <div class="info-title">e3公告</div>
       </div>
 
 
